@@ -59,6 +59,8 @@ font</font> in the middle.</font></p>
 <font size="5">A larger font (size 5).</font> <font size="6">A big font (size 6).</font>
 <font size="7">Very big font (size 7).</font></p>
 
+<p>By points: <font size="10pt">10 points</font> <font size="20pt">20 points</font> <font size="30pt">30 points</font> <font size="40pt">40 points</font></p>
+
 <p><font back="#FFFF00">This text was important enough to highlight with the BACK attribute
 to show yellow.</font></p>
 
@@ -83,6 +85,7 @@ Known problems to be corrected in the future:
 <ul>
     <li>"text\n&lt;font&gt;text2&lt;/font&gt;" - the newline should be interpreted as a space but it's not</li>
     <li>most browsers can cope with missing &lt;/li&gt; tags, we don't</li>
+    <li>the "s" and "del" tags don't show the overstrike for some reason</li>
 </ul>
 
 </body>
